Dockerfile modified to be able to run on marathon

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -12,6 +12,7 @@
       //Define a global variable "socketPort" to provide front with the port
       //where the server is launched
       var socketPort = {{.Port}};
+      var host = {{.Host}};
     </script>
     <script src="/public/js/bundle.js"></script>
   </body>
